@@ -1,12 +1,12 @@
-from batou.lib.python import Package
+from batou.lib.python import Package, VirtualEnv
 import mock
+import pytest
 import unittest
 
 
 class TestVirtualEnv(unittest.TestCase):
 
     def virtualenv(self, *args, **kw):
-        from ..python import VirtualEnv
         virtualenv = VirtualEnv(*args, **kw)
         return virtualenv
 
@@ -47,4 +47,19 @@ def test_package_install(root):
     root.component += package
     package.update()
     package.cmd.assert_called_with(
-        'bin/pip --timeout=3 install --egg --force-reinstall "foo==1.2.5"')
+        'bin/pip --timeout=3 install --egg --ignore-installed "foo==1.2.5"')
+
+
+@pytest.mark.timeout(20)
+def test_updates_old_distribute_to_setuptools(root):
+    venv = VirtualEnv('2.7')
+    venv.update()
+    distribute = Package('distribute', version='0.6.34', timeout=10)
+    distribute.update()
+    setuptools = Package('setuptools', version='0.9.8', timeout=10)
+    setuptools.update()
+    # We can't simply call verify, since distribute *still* manages to
+    # manipulate the installation process and update itself, so our version
+    # number is ignored and we get the most recent setuptools. *le major sigh*
+    assert 'distribute-' not in setuptools.cmd(
+        'bin/python -c "import setuptools; print setuptools.__file__"')[0]
